--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <meta name="description" content="Discover GenFox AI Assistant, your personal AI companion from the future. Designed to meet all your needs with cutting-edge technology and innovation.">
+    <meta name="keywords" content="GenFox AI, AI assistant, personal assistant, future AI, innovative technology">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GenFox</title>
   </head>
